Index.html Dimensions
Changed dimensions to be responsive and mobile-friendly

--- a/client/index.html
+++ b/client/index.html
@@ -13,8 +13,8 @@
     <!--------- NAV BAR -------->
     <nav>
 
-        <div class="logo">
-            <img src="images/hatitat.png">
+        <div class="logo-container">
+            <img class="logo" src="images/hatitat.png">
         </div>
 
     </nav>
@@ -31,7 +31,7 @@
         </div>
         
         <!------ USER LOGIN ------->
-        <div class="login">
+        <div class="login-container">
         
 
             <div class="loginForm">
