USER LOGIN FUNCTIONALITY
Created login functionality for user

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <title>HABITAT</title>
 
     <link rel="stylesheet" href="style.css">
-
+    <script defer src="script.js"></script>
 </head>
 <body>
     
@@ -35,7 +35,7 @@
         
 
             <div class="loginForm">
-                <form action="api/server.js">
+                <form id='userLoginForm' action="api/server.js">
                     <label for="username">Username</label>
                     <input type="text" class="input" id="username" name="username" placeholder="Your name..">
 
