Added structure to landing page HTML and CSS styling

--- a/client/newLandingPage.html
+++ b/client/newLandingPage.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HABITAT</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
-</head>
-<body>
-    
-    <!--------- NAV BAR -------->
+  </head>
+  <body>
+    <!-- ------- NAV BAR ------
     <nav>
 
         <div class="logo-container">
             <img class="logo" src="images/hatitat.png">
         </div>
 
-    </nav>
+    </nav> -->
 
+    <!-------- Main Container --------->
+    <div class="content">
+      <h1 id="landing-h1">
+        Keep forgetting to water your plants?
+        <br /><br />
+        Check Habitat!
+      </h1>
 
+      <div class="btn-container">
+        <button id="register">
+          <img
+            src="/client/images/registericon.svg"
+            alt="Sprout coming out of soil"
+          />Register
+        </button>
 
-</body>
+        <button id="login">
+          <img src="/client/images/loginicon.svg" alt="growing leaves" />Log in
+        </button>
+      </div>
+    </div>
+    <!------- Logo Container -------->
+    <div class="logo-container"></div>
+  </body>
 </html>
