Edited the structure and styling of landing page

--- a/client/newLandingPage.html
+++ b/client/newLandingPage.html
@@ -8,16 +8,6 @@
     <script defer src="script.js"></script>
   </head>
   <body>
-    <!-- ------- NAV BAR ------
-    <nav>
-
-        <div class="logo-container">
-            <img class="logo" src="images/hatitat.png">
-        </div>
-
-    </nav> -->
-
-    <!-------- Main Container --------->
     <div class="content">
       <h1 id="landing-h1">
         Keep forgetting to water your plants?
@@ -25,20 +15,27 @@
         Check Habitat!
       </h1>
 
+      <!-- button container -->
       <div class="btn-container">
-        <button id="register">
-          <img
-            src="/client/images/registericon.svg"
-            alt="Sprout coming out of soil"
-          />Register
+        <button id="register" type="button">
+          <!-- <img src="/client/images/registericon.svg" alt="" /> -->
+          Register
         </button>
 
-        <button id="login">
-          <img src="/client/images/loginicon.svg" alt="growing leaves" />Log in
+        <button id="login" type="button">
+          <!-- <img src="/client/images/loginicon.svg" alt="" /> -->
+          Log in
         </button>
       </div>
     </div>
-    <!------- Logo Container -------->
-    <div class="logo-container"></div>
+
+    <!-- logo container -->
+    <div class="logo-container">
+      <img
+        src="/client/images/hatitat.png"
+        alt=""
+        style="height: 100%; width: 100%; object-fit: contain"
+      />
+    </div>
   </body>
 </html>
