Adding styling to log in and register pages

--- a/client/users/login.html
+++ b/client/users/login.html
@@ -12,13 +12,13 @@
 </head>
 <body>
 
+<div class="container-fluid plant">
     <!-- LOG IN -->
-
-    <div class="container">
-        <h3>Welcome Back</h3>
-        <h1>Please Log In</h1>
-        
-            <div class="btn-group-vertical">
+        <div class="header">
+            <h3>Welcome Back</h3>
+            <h1>Please Log In</h1>
+        </div>
+            <div class="btn-group-vertical form-pos">
                 <form>
                     <div class="form-group">
                         <input type="text" class="form-control button" id="usr" name="username" placeholder="Username">
@@ -28,13 +28,13 @@
                       </div>
                       <button type="submit" class="button">Continue</button>
                 </form>
-            </div>
             <p>or</p>
-            <div>
-                <input type="button" class="button" value="Register">
-            </div>
-    </div>
-
+                <div>
+                    <input type="button" class="button" value="Register">
+                </div>
+        </div>
+    
+</div>
 
 
 </body>
