--- a/client/users/register.html
+++ b/client/users/register.html
@@ -12,13 +12,16 @@
 </head>
 <body>
 
+<div class="container-fluid plant">
+
     <!-- REGISTER -->
 
-    <div class="container">
-        <h3>Hi there!</h3>
-        <h1>Let's get started</h1>
-        
-            <div class="btn-group-vertical">
+   
+        <div class="header">
+            <h3>Hi there!</h3>
+            <h1>Let's get started</h1>
+        </div>   
+            <div class="btn-group-vertical form-pos">
                 <form>
                     <div class="form-group">
                         <input type="text" class="form-control button" id="usr" name="username" placeholder="Username">
@@ -28,13 +31,13 @@
                       </div>
                       <button type="submit" class="button">Create Account</button>
                 </form>
+                <p>or</p>
+                <div>
+                    <input type="button" class="button" value="Log in">
+                </div>
             </div>
-            <p>or</p>
-            <div>
-                <input type="button" class="button" value="Log in">
-            </div>
-    </div>
 
+</div>
 
 
 </body>
