Changed buttons to links styled as buttons

--- a/client/index.html
+++ b/client/index.html
@@ -17,16 +17,19 @@
 
       <!-- button container -->
       <div class="btn-container">
-        <button id="register" type="button">
-          <!-- <img src="/client/images/registericon.svg" alt="" /> -->
-          Register
-        </button>
 
-        <button id="login" type="button">
-          <!-- <img src="/client/images/loginicon.svg" alt="" /> -->
-          Log in
-        </button>
-      </div>
+        <div class="btn-register">
+          <a href="/client/users/register.html">
+            <!-- <img src="/client/images/icons8-plant-58.png" alt=""> -->
+            Register</a>
+        </div>
+
+        <div class="btn-login">
+          <a href="/client/users/login.html">
+            <!-- <img src="/client/images/icons8-plant-48.png" alt=""> -->
+            Login</a>
+        </div>
+
     </div>
 
     <!-- logo container -->
