--- a/client/trackers/trackers.html
+++ b/client/trackers/trackers.html
@@ -12,19 +12,25 @@
     <div class="content">
       <h1>Habits</h1>
 
+      <span></span>
+
       <!-- button -->
       <button type="button">...More Habits</button>
     </div>
 
     <!-- Nav bar -->
     <div class="navbar">
-      <a href="">
+      <a href="/client/plants/plant.html">
         <img src="/client/images/icons8-plant-64.png" alt="" />
       </a>
       <a href="">
-        <img src="/client/images/icons8-home-50.png" alt="" />
+        <img src="/client/images/homeicon.png" alt="" />
       </a>
-      <a href="">Not sure yet</a>
+      <a href="">
+        <img src="/client/images/icons8-settings-50.png" alt="">
+      </a>
+      </div>
     </div>
+
   </body>
 </html>
