--- a/client/index.html
+++ b/client/index.html
@@ -1,41 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HABITAT</title>
-
-    <link rel="stylesheet" href="style.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="script.js"></script>
-  </head>
-  <body>
-    <div class="content">
-      <h1 id="landing-h1">
-        Keep forgetting to water your plants?
-        <br /><br />
-        Check Habitat!
-      </h1>
+    <link rel="stylesheet" href="../client/style.css">
+    <title>Index</title>
+</head>
+<body>
+    <!-- OUTER CONTAINER-->
+    <div class="container">
 
-      <!-- button container -->
-      <div class="btn-container">
-        <button id="register" type="button">
-          <!-- <img src="/client/images/registericon.svg" alt="" /> -->
-          Register
-        </button>
+        <div class="row row-cols-1 box align-items-center">
+            <div class="col d-flex justify-content-center">
+               <h1> KEEP FORGETTING TO WATER YOUR PLANTS? </h1>
+            </div>
+            <div class="col d-flex justify-content-center">
+ 
+            </div>
 
-        <button id="login" type="button">
-          <!-- <img src="/client/images/loginicon.svg" alt="" /> -->
-          Log in
-        </button>
-      </div>
+                <div class="container">     
+                  <div class="row">
+                    <div class="col-sm-6 d-flex justify-content-center">
+                        <button class=" btn btn2">Register</button>
+                    </div>
+                    <div class="col-sm-6 d-flex justify-content-center">
+                        <button class=" btn btn2 block">Log in</button> 
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+                        <!-- Nav bar -->
+                        <div class="navbar fixed-bottom bg-light">
+                            <a href="">
+                              <img src="../client/images/icons8-plant-64.png" alt="" />
+                            </a>
+                            <a href="">
+                              <img src="../client/images/icons8-home-50.png" alt="" />
+                            </a>
+                            <a href="">Not sure yet</a>
+                          </div>
+                  </div>
+          </div>
+ 
     </div>
 
-    <!-- logo container -->
-    <div class="logo-container">
-      <img
-        src="/client/images/hatitat.png"
-        alt=""
-        style="height: 100%; width: 100%; object-fit: contain"
-      />
-    </div>
-  </body>
+</body>
 </html>
