Adding functionality to login and register buttons that redirects to the ccorrect html page

--- a/client/index.html
+++ b/client/index.html
@@ -18,19 +18,28 @@
 
         <div class="row row-cols-1 box align-items-center">
             <div class="col d-flex justify-content-center">
-               <h1> KEEP FORGETTING TO WATER YOUR PLANTS? </h1>
+               <h3> Keep forgetting to water your plants? </h3>
             </div>
+            <div class="col d-flex justify-content-center">
+                <h3> check out... </h3>
+             </div>
+            <div class="col d-flex justify-content-center">
+                <h1>HABITAT</h1>
+             </div>
+
+            
             <div class="col d-flex justify-content-center">
  
             </div>
 
-                <div class="container">     
+                <div class="container-fluid">     
                   <div class="row">
                     <div class="col-sm-6 d-flex justify-content-center">
-                        <button class=" btn btn2">Register</button>
+                            <a href="../client/users/register.html" class=" btn btn2 block" role="button">Register</a>
+    
                     </div>
                     <div class="col-sm-6 d-flex justify-content-center">
-                        <button class=" btn btn2 block">Log in</button> 
+                        <a href="../client/users/login.html" class=" btn btn2 block" role="button">Log in</a>
                     </div>
                   </div>
                 </div>
