add redirect functionality to buttons on user html pages

--- a/client/users/login.html
+++ b/client/users/login.html
@@ -37,7 +37,7 @@
                 <h2>OR</h2>
             </div>
             <div class="col d-flex justify-content-center">
-                <input type="button" class="btn btn3" value="Register now!">
+                <a href="./register.html" class="btn btn3" role="button">Register Now!</a>
             </div>
 
                         <!-- Nav bar -->
