LOGIN & REGISTER FUNCTIONALITY
two separate scripts for each

--- a/client/users/login.html
+++ b/client/users/login.html
@@ -21,12 +21,12 @@
                <h1> WELCOME BACK! </h1>
             </div>
             <div class="col d-flex justify-content-center">
-                <form>
+                <form id="userLoginForm">
                     <div>
-                        <input type="text" class="btn" id="usr" name="username" placeholder="Username">
+                        <input type="text" class="btn" id="usernamer" name="username" placeholder="Username">
                     </div>
                     <div>
-                        <input type="password" class="btn" id="pwd" name="password" placeholder="Password">
+                        <input type="password" class="btn" id="password" name="password" placeholder="Password">
                     </div>
                     <div class="col d-flex justify-content-center">
                       <button type="submit" class=" btn btn2">Continue</button>
