--- a/client/users/register.html
+++ b/client/users/register.html
@@ -8,7 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script defer src="script.js"></script>
+    
+    <script defer src="register.js"></script>
     <link rel="stylesheet" href="../users/users.css">
     <title>Register</title>
 </head>
@@ -25,7 +26,7 @@
             </div>
 
             <div class="col d-flex justify-content-center">
-                <form>
+                <form id="userRegisterForm">
                     <div>
                         <input type="text" class="btn" id="usr" name="username" placeholder="Username">
                     </div>
