Create plant and plants page set up (html)

--- a/client/plants/createPlant.html
+++ b/client/plants/createPlant.html
@@ -16,9 +16,28 @@
 <body>
     <!-- OUTER CONTAINER-->
     <div class="container">
+        <div class="row row-cols-1 box align-items-center">
+            <div class="col d-flex justify-content-center">
+               <h1> CREATE A PLANT </h1>
+            </div> 
 
-        <!--CREATE PLANT FORM-->
+            <div class="col d-flex justify-content-center">
+                        <!--CREATE PLANT FORM-->
         <div class="container-fluid">
+                <form id="createPlantForm">
+                    <div>
+                        <input type="text" class="btn" id="pT" name="plantType" placeholder="Enter plant type">
+                    </div>
+                    <div>
+                        <input type="text" class="btn" id="nickname" name="nickname" placeholder="Enter plant nickname">
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                      <button type="submit" class=" btn btn2"> + Create Plant</button>
+                    </div>
+                </form>
+        </div>
+          </div>
+          </div>
 
         </div>
                       <!-- Nav bar -->
