--- a/client/users/register.html
+++ b/client/users/register.html
@@ -28,6 +28,9 @@
             <div class="col d-flex justify-content-center">
                 <form id="userRegisterForm">
                     <div>
+                        <input type="text" class="btn" id="firstname" name="firstname" placeholder="First Name">
+                    </div>
+                    <div>
                         <input type="text" class="btn" id="usr" name="username" placeholder="Username">
                     </div>
                     <div>
