PLANT FUNCTIONS CREATED
Post & Get requests for plants database

--- a/client/plants/createPlant.html
+++ b/client/plants/createPlant.html
@@ -26,7 +26,7 @@
         <div class="container-fluid">
                 <form id="createPlantForm">
                     <div>
-                        <input type="text" class="btn" id="pT" name="plantType" placeholder="Enter plant type">
+                        <input type="text" class="btn" id="plantType" name="plantType" placeholder="Enter plant type">
                     </div>
                     <div>
                         <input type="text" class="btn" id="nickname" name="nickname" placeholder="Enter plant nickname">
