--- a/client/plants/plants.html
+++ b/client/plants/plants.html
@@ -27,39 +27,16 @@
             <!--PLANT CARDS-->
                 <div class="container">
                    
+                    <!--- INJECTING DATA HERE USING JAVASCRIPT  --->
                     <div class="card-columns">
                       <div class="card plant-card">
-                        <div class="card-body text-center">
-                          <p class="card-text">First plant</p>
-                        </div>
-                      </div>
-                      <div class="card plant-card">
-                        <div class="card-body text-center">
-                          <p class="card-text">Second Plant</p>
-                        </div>
-                      </div>
-                      <div class="card plant-card">
-                        <div class="card-body text-center">
-                          <p class="card-text">Third Plant</p>
-                        </div>
-                      </div>
-                      <div class="card plant-card">
-                        <div class="card-body text-center">
-                          <p class="card-text">Fourth Plant</p>
-                        </div>
-                      </div>  
-                      <div class="card plant-card">
-                        <div class="card-body text-center">
-                          <p class="card-text">Fifth Plant</p>
-                        </div>
-                      </div>
-                      <div class="card plant-card">
-                        <div class="card-body text-center">
-                          <p class="card-text">Sixth Plant</p>
-                        </div>
-                      </div>
+                        <div class="card-body text-center" id="plantInfo">
+                        
+                        </div>   
+                      </div> 
                     </div>
-                  </div>
+
+                </div>
 
         </div>
                       <!-- Nav bar -->
