adding frequency button to createPlant.html

--- a/client/plants/createPlant.html
+++ b/client/plants/createPlant.html
@@ -31,6 +31,20 @@
                     <div>
                         <input type="text" class="btn" id="nickname" name="nickname" placeholder="Enter plant nickname">
                     </div>
+                    <!--Frequency button-->
+                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <label class="btn btn4">
+                          <input type="radio" name="options" id="option1" checked> Daily
+                        </label>
+                        <label class="btn btn4">
+                          <input type="radio" name="options" id="option2"> Weekly
+                        </label>
+                        <label class="btn btn4">
+                          <input type="radio" name="options" id="option3"> Monthly
+                        </label>
+                      </div>
+
+
                     <div class="col d-flex justify-content-center">
                       <button type="submit" class=" btn btn2"> + Create Plant</button>
                     </div>
