FREQUENCY ADDED TO CREATEPLANT.HTML

--- a/client/plants/createPlant.html
+++ b/client/plants/createPlant.html
@@ -32,15 +32,15 @@
                         <input type="text" class="btn" id="nickname" name="nickname" placeholder="Enter plant nickname">
                     </div>
                     <!--Frequency button-->
-                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                    <div class="btn-group btn-group-toggle" data-toggle="buttons" id="frequency">
                         <label class="btn btn4">
-                          <input type="radio" name="options" id="option1" checked> Daily
+                          <input type="radio" name="options" id="daily"> Daily
                         </label>
                         <label class="btn btn4">
-                          <input type="radio" name="options" id="option2"> Weekly
+                          <input type="radio" name="options" id="weekly"> Weekly
                         </label>
                         <label class="btn btn4">
-                          <input type="radio" name="options" id="option3"> Monthly
+                          <input type="radio" name="options" id="monthly"> Monthly
                         </label>
                       </div>
 
