--- a/client/events/events.html
+++ b/client/events/events.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="../trackers/trackers.css" />
+    <link rel="stylesheet" href="../events/events.css" />
     <title>Tracker</title>
   </head>
   <body>
@@ -24,10 +24,10 @@
 
         <div class="container tracker">
           <div class="row row-cols-1 align-items-center">
-            <div class="col d-flex justify-content-center">awkjcbvdabvbkdv</div>
+            <div class="col d-flex justify-content-center"></div>
           </div>
           <div class="row align-items-center">
-            <p>sgvadvnldnvldnvsd</p>
+            <p></p>
           </div>
         </div>
 
