--- a/client/plants/createPlant.html
+++ b/client/plants/createPlant.html
@@ -26,21 +26,21 @@
         <div class="container-fluid">
                 <form id="createPlantForm">
                     <div>
-                        <input type="text" class="btn" id="plantType" name="plantType" placeholder="Enter plant type">
+                        <input type="text" class="btn" id="pT" name="plantType" placeholder="Enter plant type">
                     </div>
                     <div>
                         <input type="text" class="btn" id="nickname" name="nickname" placeholder="Enter plant nickname">
                     </div>
                     <!--Frequency button-->
-                    <div class="btn-group btn-group-toggle" data-toggle="buttons" id="frequency">
+                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
                         <label class="btn btn4">
-                          <input type="radio" name="options" id="daily"> Daily
+                          <input type="radio" name="options" id="option1" checked> Daily
                         </label>
                         <label class="btn btn4">
-                          <input type="radio" name="options" id="weekly"> Weekly
+                          <input type="radio" name="options" id="option2"> Weekly
                         </label>
                         <label class="btn btn4">
-                          <input type="radio" name="options" id="monthly"> Monthly
+                          <input type="radio" name="options" id="option3"> Monthly
                         </label>
                       </div>
 
