--- a/client/plants/createPlant.html
+++ b/client/plants/createPlant.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     
-    <script defer src="plants.js"></script>
+    <script defer src="createPlant.js"></script>
     <link rel="stylesheet" href="./plants.css">
     <title>Create New Plant</title>
 </head>
@@ -34,13 +34,13 @@
                     <!--Frequency button-->
                     <div class="btn-group btn-group-toggle" data-toggle="buttons" id="frequency">
                         <label class="btn btn4">
-                          <input type="radio" name="options" id="daily"> Daily
+                          <input type="radio" name="options" id="daily" value="365"> Daily
                         </label>
                         <label class="btn btn4">
-                          <input type="radio" name="options" id="weekly"> Weekly
+                          <input type="radio" name="options" id="weekly" value="52"> Weekly
                         </label>
                         <label class="btn btn4">
-                          <input type="radio" name="options" id="monthly"> Monthly
+                          <input type="radio" name="options" id="monthly" value="12"> Monthly
                         </label>
                       </div>
 
