Updated the Navbar

--- a/client/plants/plants.html
+++ b/client/plants/plants.html
@@ -43,13 +43,15 @@
         </div>
                       <!-- Nav bar -->
             <div class="navbar fixed-bottom bg-light">
-                <a href="">
-                    <img src="../images/icons8-plant-64.png" alt="" />
+                <a href="/client/plants/createPlant.html">
+                    <img src="../images/icons8-plant-64.png" alt="Plant pot icon" />
+                </a>
+                <a href="/client/plants/plants.html">
+                    <img src="/client/images/homeicon.png" alt="House/home icon" />
                 </a>
                 <a href="">
-                    <img src="../images/icons8-home-50.png" alt="" />
+                    <img src="/client/images/icons8-sign-out-50.png" alt="Logout button">
                 </a>
-                <a href="">Not sure yet</a>
             </div>
     </div>
 
