--- a/client/plants/createPlant.html
+++ b/client/plants/createPlant.html
@@ -56,13 +56,15 @@
         </div>
                       <!-- Nav bar -->
             <div class="navbar fixed-bottom bg-light">
-                <a href="">
+                <a href="/client/plants/createPlant.html">
                     <img src="../images/icons8-plant-64.png" alt="" />
                 </a>
-                <a href="">
-                    <img src="../images/icons8-home-50.png" alt="" />
+                <a href="/client/plants/plants.html">
+                    <img src="/client/images/homeicon.png" alt="" />
                 </a>
-                <a href="">Not sure yet</a>
+                <a href="">
+                  <img src="/client/images/icons8-sign-out-50.png" alt="">
+                </a>
             </div>
     </div>
 
