made changes to login.js and register.js

--- a/client/users/login.html
+++ b/client/users/login.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script defer src="script.js"></script>
+    <script defer src="login.js"></script>
     <link rel="stylesheet" href="../users/users.css">
     <title>Log In</title>
 </head>
@@ -23,7 +23,7 @@
             <div class="col d-flex justify-content-center">
                 <form id="userLoginForm">
                     <div>
-                        <input type="text" class="btn" id="usernamer" name="username" placeholder="Username">
+                        <input type="text" class="btn" id="email" name="email" placeholder="Email">
                     </div>
                     <div>
                         <input type="password" class="btn" id="password" name="password" placeholder="Password">
