Corrected img src for navbar icons

--- a/client/plants/plants.html
+++ b/client/plants/plants.html
@@ -53,10 +53,10 @@
                     <img src="../images/icons8-plant-64.png" alt="Plant pot icon" />
                 </a>
                 <a href="/client/plants/plants.html">
-                    <img src="/client/images/homeicon.png" alt="House/home icon" />
+                    <img src="../images/homeicon.png" alt="House/home icon" />
                 </a>
                 <a href="">
-                    <img src="/client/images/icons8-sign-out-50.png" alt="Logout button">
+                    <img src="../images/icons8-sign-out-50.png" alt="Logout button">
                 </a>
             </div>
     </div>
