--- a/client/plants/createPlant.html
+++ b/client/plants/createPlant.html
@@ -62,10 +62,10 @@
                     <img src="../images/icons8-plant-64.png" alt="" />
                 </a>
                 <a href="/client/plants/plants.html">
-                    <img src="/client/images/homeicon.png" alt="" />
+                    <img src="../images/homeicon.png" alt="" />
                 </a>
                 <a href="">
-                  <img src="/client/images/icons8-sign-out-50.png" alt="">
+                  <img src="../images/icons8-sign-out-50.png" alt="">
                 </a>
             </div>
     </div>
