Styled the cards for plants

--- a/client/plants/createPlant.html
+++ b/client/plants/createPlant.html
@@ -58,10 +58,10 @@
         </div>
                       <!-- Nav bar -->
             <div class="navbar fixed-bottom bg-light">
-                <a href="/client/plants/createPlant.html">
+                <a href="./createPlant.html">
                     <img src="../images/icons8-plant-64.png" alt="" />
                 </a>
-                <a href="/client/plants/plants.html">
+                <a href="./plants.html">
                     <img src="../images/homeicon.png" alt="" />
                 </a>
                 <a href="">
