--- a/client/users/login.html
+++ b/client/users/login.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="login.js"></script>
-    <link rel="stylesheet" href="../users/users.css">
+    <link rel="stylesheet" href="users.css">
     <title>Log In</title>
 </head>
 <body>
