changed file structure

--- a/client/users/plants.html
+++ b/client/users/plants.html
@@ -43,13 +43,13 @@
         </div>
                       <!-- Nav bar -->
             <div class="navbar fixed-bottom bg-light">
-                <a href="./createPlant.html">
+                <a href="plants.html">
                     <img src="../images/icons8-plant-64.png" alt="Plant pot icon" />
                 </a>
-                <a href="plants.html">
+                <a href="calendar.html">
                     <img src="../images/homeicon.png" alt="House/home icon" />
                 </a>
-                <a href="">
+                <a href="login.html">
                     <img src="../images/icons8-sign-out-50.png" alt="Logout button">
                 </a>
             </div>
