Added styling to the calendar

--- a/client/users/calendar.html
+++ b/client/users/calendar.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./calendar.css" />
   </head>
   <body>
     <div id="container">
@@ -35,6 +35,6 @@
       <div id="calendar"></div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="./calendar.js"></script>
   </body>
 </html>
