--- a/client/users/plants.html
+++ b/client/users/plants.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     
     <script defer src="plants.js"></script>
-    <link rel="stylesheet" href="./plants.css">
+    <link rel="stylesheet" href="plants.css">
     <title>User Plants</title>
 </head>
 <body>
