--- a/client/users/login.html
+++ b/client/users/login.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     <!-- OUTER CONTAINER-->
-    <div class="container">
+    <div class="container h-100">
 
-        <div class="row row-cols-1 box align-items-center">
+        <div class="row row-cols-1 box justify-content-center align-items-center">
             <div class="col d-flex justify-content-center">
                <h1> WELCOME BACK! </h1>
             </div>
