--- a/client/users/register.html
+++ b/client/users/register.html
@@ -19,7 +19,7 @@
   <body>
     <!-- OUTER CONTAINER-->
     <div class="container">
-      <div class="row row-cols-1 box align-items-center">
+      <div class="row row-cols-1 box align-items-center justify-content-center">
         <div class="col d-flex justify-content-center">
           <h1>HI THERE!</h1>
         </div>
