CREATE PLANT ROUTE FIXED

--- a/client/users/createPlant.html
+++ b/client/users/createPlant.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     
     <script defer src="createPlant.js"></script>
-    <link rel="stylesheet" href="./plants.css">
+    <link rel="stylesheet" href="plants.css">
     <title>Create New Plant</title>
 </head>
 <body>
