--- a/client/plants/plants.html
+++ b/client/plants/plants.html
@@ -34,6 +34,9 @@
                 <a href="plants.html">
                     <img src="../images/homeicon.png" alt="House/home icon" />
                 </a>
+                <a href="../users/calendar.html">
+                    <img src="../images/icons8-planner-50.png" alt="">
+                  </a>
                 <a href="">
                     <img src="../images/icons8-sign-out-50.png" alt="Logout button">
                 </a>
