--- a/client/plants/createPlant.html
+++ b/client/plants/createPlant.html
@@ -64,6 +64,9 @@
                 <a href="./plants.html">
                     <img src="../images/homeicon.png" alt="" />
                 </a>
+                <a href="../users/calendar.html">
+                  <img src="../images/icons8-planner-50.png" alt="">
+                </a>
                 <a href="">
                   <img src="../images/icons8-sign-out-50.png" alt="">
                 </a>
