--- a/client/users/calendar.html
+++ b/client/users/calendar.html
@@ -35,6 +35,22 @@
       <div id="calendar"></div>
     </div>
 
+    <!-- Nav bar -->
+    <div class="navbar fixed-bottom bg-light">
+      <a href="createPlant.html">
+        <img src="../images/icons8-plant-64.png" alt="Plant pot icon" />
+      </a>
+      <a href="plants.html">
+        <img src="../images/homeicon.png" alt="House/home icon" />
+      </a>
+      <a href="calendar.html">
+        <img src="../images/icons8-planner-50.png" alt="" />
+      </a>
+      <a href="login.html">
+        <img src="../images/icons8-sign-out-50.png" alt="Logout button" />
+      </a>
+    </div>
+
     <script src="./calendar.js"></script>
   </body>
 </html>
