--- a/client/users/plants.html
+++ b/client/users/plants.html
@@ -34,7 +34,7 @@
                 <a href="plants.html">
                     <img src="../images/homeicon.png" alt="House/home icon" />
                 </a>
-                <a href="calender.html">
+                <a href="calendar.html">
                     <img src="../images/icons8-planner-50.png" alt="">
                   </a>
                 <a href="login.html">
