--- a/client/users/createPlant.html
+++ b/client/users/createPlant.html
@@ -15,15 +15,13 @@
 </head>
 <body>
     <!-- OUTER CONTAINER-->
-    <div class="container">
-        <div class="row row-cols-1 box align-items-center">
+    <div class="container h-100">
+        <div class="row row-cols-1 box justify-content-center align-items-center">
             <div class="col d-flex justify-content-center">
                <h1> CREATE A PLANT </h1>
-            </div> 
-
+            </div>
             <div class="col d-flex justify-content-center">
                         <!--CREATE PLANT FORM-->
-        <div class="container-fluid">
                 <form id="createPlantForm">
                     <div>
                         <input type="text" class="btn" id="pT" name="plantType" placeholder="Enter plant type">
@@ -51,7 +49,7 @@
                       <button type="submit" class=" btn btn2"> + Create Plant</button>
                     </div>
                 </form>
-        </div>
+        
           </div>
           </div>
 
@@ -71,6 +69,7 @@
                     <img src="../images/icons8-sign-out-50.png" alt="Logout button">
                 </a>
             </div>
+    </div>
     </div>
 
 </body>
