--- a/client/users/createPlant.html
+++ b/client/users/createPlant.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!-- OUTER CONTAINER-->
-    <div class="container">
+    <div class="container h-100">
         <div class="row row-cols-1 box align-items-center">
             <div class="col d-flex justify-content-center">
                <h1> CREATE A PLANT </h1>
@@ -23,7 +23,7 @@
 
             <div class="col d-flex justify-content-center">
                         <!--CREATE PLANT FORM-->
-        <div class="container-fluid">
+        
                 <form id="createPlantForm">
                     <div>
                         <input type="text" class="btn" id="pT" name="plantType" placeholder="Enter plant type">
@@ -52,8 +52,7 @@
                     </div>
                 </form>
         </div>
-          </div>
-          </div>
+          
 
         </div>
                       <!-- Nav bar -->
@@ -71,6 +70,9 @@
                     <img src="../images/icons8-sign-out-50.png" alt="Logout button">
                 </a>
             </div>
+            </div>
+    </div>
+    </div>
     </div>
 
 </body>
